test/good/automatic/base/without_input/ret_zero/0042.lat
// official test 21
int main() {
    if (true) {
      printInt(1);
      return 0;
    }
}
