test/bad/automatic/base/compile_time/0042.lat
int main() {
    if(int i = 0) {
    }
    return 0;
}